Updates xqueryx.zip and XQueryXConverter.jar.  Removes duplicate environment.

--- a/tools/xqx-conversion-failures.properties
+++ b/tools/xqx-conversion-failures.properties
@@ -59,6 +59,7 @@ K-InternalVariablesWith-10
 K-CombinedErrorCodes-13
 K-CombinedErrorCodes-14
 K-CombinedErrorCodes-15
+function-call-reserved-function-names-018
 
 # Unbalanced direct element constructor
 K2-DirectConElemAttr-6a
@@ -101,3 +102,9 @@ K2-DirectConElemNamespace-74
 XQST0022_1
 XQST0022_2
 XQST0068
+
+# TODO This parses 10 and 30 but not 31.  We need to run multiple versions of the converter.
+function-call-reserved-function-names-039
+function-call-reserved-function-names-041
+function-call-reserved-function-names-043
+function-call-reserved-function-names-045
