--- a/tools/xqx-conversion-failures.properties
+++ b/tools/xqx-conversion-failures.properties
@@ -1,4 +1,9 @@
 
+# This test won't convert.  Let's look into it after
+# After this issue is resolved:
+# https://lists.w3.org/Archives/Public/public-xsl-query/2016Mar/0035.html 
+MapConstructor-025
+
 # 
 # This file contains the list of tests that are expected to fail
 # conversion to XQueryX 
