--- a/tools/xqx-conversion-failures.properties
+++ b/tools/xqx-conversion-failures.properties
@@ -1,8 +1,14 @@
 
+
+
 # This test won't convert.  Let's look into it after
 # After this issue is resolved:
 # https://lists.w3.org/Archives/Public/public-xsl-query/2016Mar/0035.html 
 MapConstructor-025
+
+
+# This appears to have a typo / syntax error
+fn-function-lookup-760
 
 #######################
 # Not convertible
